Updated user migration, controller, and Swagger docs
