# src/schema/userSchema.ts
@@ -4,6 +4,11 @@ export const AddUserSchema = joi.object({
   name: joi.string().required(),
   email: joi.string().email().required(),
   password: joi.string().min(8).required(),
+   roleName: joi.string().valid('Retailer', 'Wholeseller', 'Customer').required(),
+  businessName: joi.string().required(), 
+  phoneNumber: joi.string()
+    .pattern(/^[0-9]{10,15}$/)
+    .required(), 
 });
 
 export const LoginUserSchema = joi.object({
